# life

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
screenshots/: screenshot_2.webm
